update 12 files, delete 5 files and create 10 files

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lottiefiles/jlottie": "^1.2.1",
+		"@lottiefiles/lottie-player": "^2.0.2",
 		"moment": "^2.29.4",
 		"nodemailer": "^6.9.4",
 		"vercel": "^31.2.2"
