--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"svelte": "^4.1.2",
 		"svelte-check": "^3.4.6",
 		"tailwindcss": "^3.3.3",
+		"tailwindcss-debug-screens": "^2.2.1",
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
 		"vite": "^4.4.8"
