--- a/package.json
+++ b/package.json
@@ -39,10 +39,15 @@
 	"type": "module",
 	"dependencies": {
 		"@dotlottie/player-component": "^2.2.0",
+		"@fortawesome/fontawesome-svg-core": "^6.4.2",
+		"@fortawesome/free-regular-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@lottiefiles/jlottie": "^1.2.1",
 		"@lottiefiles/lottie-player": "^2.0.2",
+		"font-awesome": "^4.7.0",
 		"moment": "^2.29.4",
 		"nodemailer": "^6.9.4",
+		"svelte-awesome": "^3.2.1",
 		"vercel": "^31.2.2"
 	}
 }
