--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@fontsource/dela-gothic-one": "^5.0.19",
     "@fontsource/raleway": "^5.0.19",
     "@iconify-json/mdi": "^1.1.66",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.9.3",
+    "markdown-it": "^14.1.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
